--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=
+spring.datasource.url=mysql://bffc77ca728ce0:06649bb3@us-cdbr-iron-east-05.cleardb.net/heroku_1fee8915c928311?reconnect=true
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
