Configurado para envio de email smtp com thymeleaf

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,8 +10,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=adriano.ramazzotte
-spring.mail.password=aaa*824963
+spring.mail.username=professoradrianoramazzotte
+spring.mail.password=ar824963
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
