--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=dev
 
 
 
-default.sender=adriano.ramazzotte@gmail.com
-default.recipient=adriano.ramazzotte@gmail.com
+default.sender=soparatesteramazzotte@gmail.com
+default.recipient=soparatesteramazzotte@gmail.com
