Implementando autenticação e geração do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.profiles.active=test
 
 default.sender=soparatesteramazzotte@gmail.com
 default.recipient=soparatesteramazzotte@gmail.com
+
+jwt.secret = sequenciaPalavraParaAssinarToken
+jwt.expiration=60000
+
