Ducumentação com Swagger completa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=test
 
-
+server.port=9000
 
 default.sender=soparatesteramazzotte@gmail.com
 default.recipient=soparatesteramazzotte@gmail.com
